logs/pandalone.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/asteval'...
Listing './lib/python3.5/site-packages/asteval-0.9.11.egg-info'...
Listing './lib/python3.5/site-packages/easygui'...
Listing './lib/python3.5/site-packages/easygui/boxes'...
Listing './lib/python3.5/site-packages/easygui-0.98.1.dist-info'...
Listing './lib/python3.5/site-packages/et_xmlfile'...
Listing './lib/python3.5/site-packages/et_xmlfile/tests'...
Listing './lib/python3.5/site-packages/et_xmlfile-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/jdcal-1.3.egg-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/openpyxl'...
Listing './lib/python3.5/site-packages/openpyxl/cell'...
Listing './lib/python3.5/site-packages/openpyxl/chart'...
Listing './lib/python3.5/site-packages/openpyxl/chartsheet'...
Listing './lib/python3.5/site-packages/openpyxl/comments'...
Listing './lib/python3.5/site-packages/openpyxl/compat'...
Listing './lib/python3.5/site-packages/openpyxl/descriptors'...
Listing './lib/python3.5/site-packages/openpyxl/drawing'...
Listing './lib/python3.5/site-packages/openpyxl/formatting'...
Listing './lib/python3.5/site-packages/openpyxl/formula'...
Listing './lib/python3.5/site-packages/openpyxl/packaging'...
Listing './lib/python3.5/site-packages/openpyxl/reader'...
Listing './lib/python3.5/site-packages/openpyxl/styles'...
Listing './lib/python3.5/site-packages/openpyxl/utils'...
Listing './lib/python3.5/site-packages/openpyxl/workbook'...
Listing './lib/python3.5/site-packages/openpyxl/workbook/external_link'...
Listing './lib/python3.5/site-packages/openpyxl/worksheet'...
Listing './lib/python3.5/site-packages/openpyxl/writer'...
Listing './lib/python3.5/site-packages/openpyxl/xml'...
Listing './lib/python3.5/site-packages/openpyxl-2.4.9.egg-info'...
Listing './lib/python3.5/site-packages/pandalone'...
Listing './lib/python3.5/site-packages/pandalone/excel'...
Listing './lib/python3.5/site-packages/pandalone/xleash'...
Listing './lib/python3.5/site-packages/pandalone/xleash/io'...
Compiling './lib/python3.5/site-packages/pandalone/xleash/io/_xlwings.py'...
***   File "./lib/python3.5/site-packages/pandalone/xleash/io/_xlwings.py", line 109
    if xlsutils.check_excell_installed()
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pandalone-0.2.4.dist-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sphinx_rtd_theme'...
Listing './lib/python3.5/site-packages/sphinx_rtd_theme/static'...
Listing './lib/python3.5/site-packages/sphinx_rtd_theme/static/css'...
Listing './lib/python3.5/site-packages/sphinx_rtd_theme/static/fonts'...
Listing './lib/python3.5/site-packages/sphinx_rtd_theme/static/js'...
Listing './lib/python3.5/site-packages/sphinx_rtd_theme-0.2.4.dist-info'...
Listing './lib/python3.5/site-packages/tlz'...
Listing './lib/python3.5/site-packages/toolz'...
Listing './lib/python3.5/site-packages/toolz/curried'...
Listing './lib/python3.5/site-packages/toolz/sandbox'...
Listing './lib/python3.5/site-packages/toolz/tests'...
Listing './lib/python3.5/site-packages/toolz-0.9.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
